# Study_mate_AI

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
