[project]
name = "new-mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torchvision>=0.27.0",
]
